Source/WebCore/html/canvas/Uint8Array.h
@@ -39,10 +39,9 @@ public:
     static PassRefPtr<Uint8Array> create(unsigned char* array, unsigned length);
     static PassRefPtr<Uint8Array> create(PassRefPtr<ArrayBuffer> buffer, unsigned byteOffset, unsigned length);
 
-#if !COMPILER(RVCT)
-    using TypedArrayBase<unsigned char>::set;
-    using IntegralTypedArrayBase<unsigned char>::set;
-#endif
+    // Can’t use "using" here due to a bug in the RVCT compiler.
+    void set(TypedArrayBase<unsigned char>* array, unsigned offset, ExceptionCode& ec) { return TypedArrayBase<unsigned char>::set(array, offset, ec); }
+    void set(unsigned index, double value) { return IntegralTypedArrayBase<unsigned char>::set(index, value); }
 
     PassRefPtr<Uint8Array> slice(int start) const;
     PassRefPtr<Uint8Array> slice(int start, int end) const;
